# static-gen

./: .gitignore  README.md  gen.py  helpers.py  pyproject.toml  requirements.txt
builder/: builder.py  exceptions.py
generator/: exceptions.py  generator.py  parser.py  templater.py  types.py
server/: server.py
templates/: article_template.html  index_template.html
