[tool.poetry]
name = "static-site-generator"
version = "0.1.0"
description = "A custom static site generator."
authors = ["Visakh <visakhcu96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
